Sii Training Samples

--- a/SiiTrainingProject/Views/_ViewImports.cshtml
+++ b/SiiTrainingProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using SiiTrainingProject
 @using SiiTrainingProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, SiiTraining
